Finish up testing fares, fixing some bugs along the way.  Closes #171.